--- a/package.json
+++ b/package.json
@@ -11,11 +11,15 @@
   "author": "Lighthouse Labs",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^3.0.4",
     "body-parser": "^1.15.2",
     "chance": "^1.0.2",
+    "ejs": "^2.6.1",
     "express": "^4.13.4",
     "md5": "^2.1.0",
-    "mongodb": "^2.2.36"
+    "mongodb": "^2.2.36",
+    "node-sass": "^4.11.0",
+    "sass": "^1.17.1"
   },
   "devDependencies": {
     "nodemon": "^1.9.2"
