--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "description": "A twitter clone by Lighthouse Labs for web bootcamp students to learn front-end dev skillz",
   "engines": {
-    "node": "8.9.4"
+    "node": "8.9.4",
+    "npm": "6.8.0"
   },
   "main": "server/index.js",
   "scripts": {
