--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "cookie-session": "^2.0.0-beta.3",
     "dotenv": "^6.2.0",
     "ejs": "^2.6.1",
+    "event-stream": "^3.3.4",
     "express": "^4.13.4",
     "md5": "^2.1.0",
     "mongodb": "^2.2.36",
