--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "body-parser": "^1.15.2",
     "chance": "^1.0.2",
     "cookie-session": "^2.0.0-beta.3",
+    "cors": "^2.8.5",
     "ejs": "^2.6.1",
     "event-stream": "^3.3.4",
     "express": "^4.13.4",
